objects/PPU_Size_Discount__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <label>Seat</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PPU Size Discount</label>
</CustomObject>